--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-21  Gustavo Noronha Silva  <kov@debian.org>
+
+	* pt_BR.po: translation update by
+	  "Raphael Higino" <raphaelh@uai.com.br>
+
 2004-06-21  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation by
