--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Jun 22 14:18:47 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/gxk/*.[hc]:
+	* beast-gtk/*.[hc]: did s/gadget/radget/g; all over the source.
+
 Tue Jun 22 14:06:42 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstutils.c: adapt macro references to contents of
