--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jun 22 14:30:21 2004  Tim Janik  <timj@gtk.org>
+
+	* po/*: final gadget -> ragdet changes.
+
 Tue Jun 22 14:18:47 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/gxk/*.[hc]:
