--- a/TODO
+++ b/TODO
@@ -1,4 +1,16 @@
 FIXMES:
+- add tolltips to grow bar buttons (through extra grow bar API)
+- implement ordinary save functionality
+- pressing F+1 on F+1, should delete old note (and its length) and insert new note (and its length)
+- pattern editor: note LENGTH!
+- pattern editor: keep focus line (i.e. tick) across zoom changes
+- pattern editor: delete line and insert line (Del Ins) implementations
+- pattern editor: nth-line background shading
+- piano roll: group movements while button is pressed 
+- piano roll: drag-and-drop should preserve channel numbers if possible
+- track view: when middle button is pressed to position song pointer, set keep-pos-til-song-start flag
+- fix trackroll dnd behaviour in upper left corner of scrollarea
+- document monphon/polyphon setups
 - implement proper pattern/track/song resizing by means of adding [-] and [+] buttons next to scrollbars
 - need midi keyboard demo .bse file to be easily loadable (via demo/ menu)
 - remove docs/generated/bse-plugin-generator.1
