--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jun 30 18:23:37 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstgrowbar.[hc]: added bst_grow_bar_set_tooltips() and
+	default tooltips.
+
 Tue Jun 29 00:47:07 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstgrowbar.[hc]: new widgets h/v grow bars, combining a
